--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,8 +6,11 @@
     "frame": "Frame",
     "rarity": "Rarity",
     "cardback": "Cardback",
+    "load-image": "Load Image",
     "type": "Type",
-    "font-size": "Font Size"
+    "font-size": "Font Size",
+
+    "tab-char": "Copy Tab Character"
   },
   "content": {
     "name": "Card Name",
@@ -24,7 +27,9 @@
     "description": "Description",
     "keywords": "Keywords",
     "flavour-text": "Flavour Text",
-    "templates": "Templates"
+    "templates": "Templates",
+    "spell": "Spell",
+    "npc": "Character"
   },
   "result": {
     "card-shirt": "Download Card Shirt",
