--- a/docs/assets/i18n/ru.json
+++ b/docs/assets/i18n/ru.json
@@ -6,8 +6,11 @@
     "frame": "Рамка",
     "rarity": "Редкость",
     "cardback": "Рубашка",
+    "load-image": "Загрузить",
     "type": "Тип",
-    "font-size": "Размер шрифта"
+    "font-size": "Размер шрифта",
+
+    "tab-char": "Скопировать знак табуляции"
   },
   "content": {
     "name": "Название карты",
@@ -24,7 +27,9 @@
     "description": "Описание",
     "keywords": "Ключевые слова",
     "flavour-text": "Дополнительный текст",
-    "templates": "Шаблоны"
+    "templates": "Шаблоны",
+    "spell": "Заклинание",
+    "npc": "Персонаж"
   },
   "result": {
     "card-shirt": "Скачать рубашку карты",
