--- a/docs/assets/i18n/ru.json
+++ b/docs/assets/i18n/ru.json
@@ -10,7 +10,8 @@
     "type": "Тип",
     "font-size": "Размер шрифта",
 
-    "tab-char": "Скопировать знак табуляции"
+    "tab-char": "Знак табуляции",
+    "multiplication-sign": "Знак умножения"
   },
   "content": {
     "name": "Название карты",
