formats implementation (WIP)

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,6 +28,7 @@
     "description": "Description",
     "keywords": "Keywords",
     "flavour-text": "Flavour Text",
+    "formats": "Formats",
     "templates": "Templates",
     "spell": "Spell",
     "npc": "Character"
