--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -28,6 +28,7 @@
     "description": "Описание",
     "keywords": "Ключевые слова",
     "flavour-text": "Дополнительный текст",
+    "formats": "Форматы",
     "templates": "Шаблоны",
     "spell": "Заклинание",
     "npc": "Персонаж"
