--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -40,6 +40,8 @@
   "result": {
     "card-shirt": "Скачать рубашку карты",
     "full-card": "Скачать",
-    "card-content": "Скачать контент карты"
+    "card-content": "Скачать контент карты",
+    "download-data": "Cкачать данные карты",
+    "upload-data": "Загрузить данные карты"
   }
 }
