--- a/docs/assets/i18n/uk.json
+++ b/docs/assets/i18n/uk.json
@@ -37,8 +37,10 @@
     "npc": "Персонаж"
   },
   "result": {
-    "card-shirt": "Завантажити сорочку",
-    "full-card": "Завантажити",
-    "card-content": "Завантажити лицьову сторонк"
+    "card-shirt": "Скачати сорочку",
+    "full-card": "Скачати",
+    "card-content": "Скачати лицьову сторону",
+    "download-data": "Скачати данні карти",
+    "upload-data": "Завантажити данні карти"
   }
 }
